# RadiantiumPlusPlus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
ext/imgui-filebrowser/: imfilebrowser.h
ext/imgui/include/: imconfig.h
ext/imgui_cmake/: CMakeLists.txt
include/rad/core/: constant.h  logger.h  macros.h  types.h
include/rad/editor/: render_context.h  window.h
include/rad/offline/: api.h  asset.h  bounding_sphere.h  build.h  color.h  common.h  frame.h  fwd.h  logger.h  math_ext.h  memory.h  ray.h  render.h  spectrum.h  transform.h  types.h  warp.h
include/rad/realtime/: input.h  model.h  render_context.h  window.h
include/radiantium/: asset.h  bsdf.h  build_context.h  camera.h  config_node.h  factory.h  frame.h  fwd.h  image_utility.h  interaction.h  light.h  location_resolver.h  logger.h  math_ext.h  model.h  object.h  radiantium.h  ray.h  renderer.h  sampler.h  shape.h  spectrum.h  static_buffer.h  stop_watch.h  texture.h  tracing_accel.h  transform.h  warp.h  wavefront_obj_reader.h  world.h
module/rad.core/: CMakeLists.txt
module/rad.core/include/rad/core/: asset.h  color.h  common.h  config_node.h  console_progress_bar.h  factory.h  image_reader.h  location_resolver.h  logger.h  macros.h  math_base.h  memory.h  non_copyable.h  stop_watch.h  triangle_model.h  types.h  volume_grid.h  volume_reader.h  wavefront_obj_reader.h
module/rad.core/src/: asset.cpp  common.cpp  factory.cpp  image_reader.cpp  location_resolver.cpp  logger.cpp  memory.cpp  triangle_model.cpp  volume_grid.cpp  volume_reader.cpp  wavefront_obj_reader.cpp
module/rad.core/src/asset/: image_exr.cpp  image_hdr.cpp  image_stb.cpp  model_obj.cpp  volume_mitsuba_vol.cpp  volume_vdb.cpp
module/rad.offline/: CMakeLists.txt
module/rad.offline.cli/: CMakeLists.txt  main.cpp
module/rad.offline.editor/: CMakeLists.txt  main.cpp
module/rad.offline.editor/i18n/: en_us.json  zh_cn_utf8.json
module/rad.offline.editor/include/rad/offline/editor/: application.h  coms.h  editor_application.h  gui_asset_panel.h  gui_camera.h  gui_file_browser_wrapper.h  gui_hierarchy.h  gui_main_bar.h  gui_object.h  gui_offline_render_panel.h  gui_preview_scene.h  ui_manager.h
module/rad.offline.editor/src/: application.cpp  coms.cpp  editor_application.cpp  gui_asset_panel.cpp  gui_camera.cpp  gui_file_browser_wrapper.cpp  gui_hierarchy.cpp  gui_main_bar.cpp  gui_object.cpp  gui_offline_render_panel.cpp  gui_preview_scene.cpp  main.cpp  ui_manager.cpp
module/rad.offline.window/: CMakeLists.txt  main.cpp
module/rad.offline/include/rad/offline/: bounding_sphere.h  distribution.h  frame.h  fwd.h  math_ext.h  ray.h  spectrum.h  transform.h  types.h
module/rad.offline/include/rad/offline/render/: accel.h  bsdf.h  camera.h  fresnel.h  interaction.h  light.h  medium.h  mesh_base.h  microfacet.h  phase_function.h  renderer.h  sample_result.h  sampler.h  scene.h  shape.h  texture.h  volume.h
module/rad.offline/src/: bounding_sphere.cpp  distribution.cpp  frame.cpp  fresnel.cpp  interaction.cpp  medium.cpp  microfacet.cpp  sampler.cpp  scene.cpp  shape.cpp  volume.cpp
module/rad.offline/src/accel/: embree.cpp
module/rad.offline/src/bsdf/: diffuse.cpp  disney.cpp  mask.cpp  perfect_glass.cpp  perfect_mirror.cpp  plastic.cpp  rough_glass.cpp  rough_metal.cpp  rough_plastic.cpp  two_side.cpp
module/rad.offline/src/camera/: perspective.cpp
module/rad.offline/src/light/: area.cpp  point.cpp  projection.cpp  skybox.cpp
module/rad.offline/src/medium/: heterogeneous.cpp  homogeneous.cpp
module/rad.offline/src/phase_function/: henyey_greenstein.cpp  isotropic.cpp
module/rad.offline/src/renderer/: ao.cpp  bdpt.cpp  particle_tracer.cpp  path.cpp  sample_renderer.cpp  vol_path.cpp
module/rad.offline/src/sampler/: independent.cpp
module/rad.offline/src/shape/: cube.cpp  mesh.cpp  mesh_base.cpp  rectangle.cpp  sphere.cpp
module/rad.offline/src/texture/: bitmap.cpp  chessboard.cpp
module/rad.offline/src/volume/: grid.cpp
module/rad.realtime/: CMakeLists.txt
module/rad.realtime/include/rad/realtime/: fwd.h  opengl_context.h  window.h
module/rad.realtime/src/: opengl_context.cpp  window.cpp
src/cli/: main.cpp
src/core/: asset.cpp  bsdf.cpp  build_context.cpp  config_node.cpp  factory.cpp  frame.cpp  image_utility.cpp  interaction.cpp  light.cpp  location_resolver.cpp  logger.cpp  math_ext.cpp  model.cpp  radiantium.cpp  ray.cpp  spectrum.cpp  stop_watch.cpp  transform.cpp  warp.cpp  wavefront_obj_reader.cpp  world.cpp
src/core/accel/: embree_accel.cpp
src/core/asset/: image.cpp  obj_model.cpp
src/core/bsdf/: diffuse.cpp
src/core/camera/: perspective.cpp
src/core/light/: area.cpp
src/core/renderer/: ao.cpp  block_sample_renderer.cpp  direct.cpp  gbuffer.cpp
src/core/sampler/: independent.cpp
src/core/shape/: mesh.cpp  sphere.cpp
src/core/texture/: bitmap.cpp  const.cpp
src/offline/: api.cpp  color.cpp  distribution.cpp  frame.cpp  fresnel.cpp  interaction.cpp  logger.cpp  medium.cpp  memory.cpp  microfacet.cpp  scene.cpp  shape.cpp  transform.cpp  types.cpp  warp.cpp
src/offline/accel/: embree.cpp
src/offline/asset/: image_default.cpp  image_exr.cpp  model_obj.cpp  static_grid.cpp  triangle_model.cpp  volume.cpp  volume_mitsuba_vol.cpp  volume_vdb.cpp  wavefront_obj_reader.cpp
src/offline/bsdf/: diffuse.cpp  disney.cpp  perfect_glass.cpp  perfect_mirror.cpp  plastic.cpp  rough_glass.cpp  rough_metal.cpp  rough_plastic.cpp  two_side.cpp
src/offline/light/: area.cpp  (+3 more)
src/offline_cli/: main.cpp
src/offline_editor/: CMakeLists.txt  editor_application.cpp  editor_application.h  main.cpp  window.cpp
src/offline_editor/dx12/: render_context_dx12.cpp
src/realtime/: CMakeLists.txt  input.cpp  model.cpp  window.cpp
src/realtime/dx12/: default_buffer.cpp  device.cpp  frame_resource.cpp  readback_buffer.cpp  render_context_dx12.cpp  resource_state.cpp  texture.cpp  upload_buffer.cpp
src/realtime/opengl/: buffer.cpp  render_context_ogl.cpp  shader.cpp  utility.cpp  vertex_array.cpp
(+67 files in other folders)
