message(STATUS "RAD build glad module")

add_library(${RAD_GLAD_MODULE_NAME} STATIC
    src/gl.c)
target_include_directories(${RAD_GLAD_MODULE_NAME} PUBLIC
    "include")
set_target_properties(${RAD_GLAD_MODULE_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
