message(STATUS "RAD build offline.cli module")
message(STATUS "RAD offline.cli find offline module ${RAD_OFFLINE_MODULE_NAME}")

add_executable(${RAD_OFFLINE_CLI_MODULE_NAME} 
    main.cpp)
target_link_libraries(${RAD_OFFLINE_CLI_MODULE_NAME} ${RAD_OFFLINE_MODULE_NAME})
set_target_properties(${RAD_OFFLINE_CLI_MODULE_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}
    EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
